--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=store
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/storedb
+spring.datasource.username=storeuser
+spring.datasource.password=storepass
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
